<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="10dp"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/tv_surah_item_number"
        style="@style/Text.Content.Medium"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:background="@drawable/bg_circle"
        android:gravity="center"
        android:text="@string/dummy_surah_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_surah_item_name"
        style="@style/Text.Title.Small"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        android:text="@string/dummy_surah_name"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintStart_toEndOf="@+id/tv_surah_item_number" />

    <TextView
        android:id="@+id/tv_surah_item_type"
        style="@style/Text.Content.Medium"
        android:layout_marginTop="2dp"
        android:text="@string/dummy_surah_type"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@+id/tv_surah_item_number"
        app:layout_constraintStart_toStartOf="@+id/tv_surah_item_name"
        app:layout_constraintTop_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/bullet_point"
        style="@style/Text.Content.Medium"
        android:layout_marginStart="4dp"
        android:text="@string/bullet"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/tv_surah_item_verse"
        app:layout_constraintStart_toEndOf="@+id/tv_surah_item_type"
        app:layout_constraintTop_toTopOf="@+id/tv_surah_item_verse" />

    <TextView
        android:id="@+id/tv_surah_item_verse"
        style="@style/Text.Content.Medium"
        android:layout_marginStart="4dp"
        android:text="@string/dummy_surah_verse"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@+id/bullet_point"
        app:layout_constraintTop_toTopOf="@+id/tv_surah_item_type" />

    <TextView
        android:id="@+id/tv_surah_item_asma"
        style="@style/Text.Title.Big"
        android:text="@string/dummy_surah_asma"
        android:textColor="@color/green_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>