<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailSurahActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/verse_list_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="@string/alfatihah"
        app:menu="@menu/detail_menu"
        app:titleTextAppearance="@style/Text.Title.Medium" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verse_list_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_read_quran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_read"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingVertical="16dp">

                    <TextView
                        android:id="@+id/tv_detail_surah_number"
                        style="@style/Text.Content.Small"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/bg_circle_white"
                        android:gravity="center"
                        android:text="@string/dummy_surah_number"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_detail_surah_name"
                        style="@style/Text.Title.Medium"
                        android:layout_marginTop="4dp"
                        android:lineSpacingMultiplier="0.9"
                        android:text="@string/dummy_surah_name"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/tv_detail_surah_meaning"
                        style="@style/Text.Content.Big"
                        android:layout_width="match_parent"
                        android:layout_marginHorizontal="16dp"
                        android:text="@string/dummy_surah_mean"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_detail_type"
                            style="@style/Text.Content.Small"
                            android:text="@string/dummy_surah_type"
                            android:textColor="@color/white" />

                        <TextView
                            style="@style/Text.Content.Small"
                            android:layout_marginHorizontal="2sp"
                            android:text="@string/bullet"
                            android:textColor="@color/white" />

                        <TextView
                            android:id="@+id/tv_detail_number_of_verse"
                            style="@style/Text.Content.Small"
                            android:text="@string/dummy_surah_verse"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_verse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/verse_item" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/loading_list_verse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verse_list_toolbar" />

    <TextView
        android:id="@+id/tv_error_list_verse"
        style="@style/Text.Content.Medium"
        android:text="@string/something_went_wrong"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verse_list_toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>